# robin

./: .coverage  .env  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  Robin_Platform_Report.docx  SECURITY.md  build_bare_metal.sh  doc_content.txt  doc_utf8.txt  docker-compose.yml  env.example  flake.nix  nginx.conf  requirements.txt  robin_config.yaml  schema.sql  start_all.bat  test.sh  test_order.py
.github/workflows/: ci.yml
.trunk/: trunk.yaml
business/: CAPITAL_RAISE_AND_TEAM.md
compliance/: CEO_CERTIFICATION_TEMPLATE.md  MIFID_II_RTS_25_CLOCK_SYNC_REPORT_TEMPLATE.md  SEC_15c3_5_COMPLIANCE_TEMPLATE.md  SEC_BROKER_DEALER_LICENSE.md
config/: dpdk_setup.sh  onload_config.sh  preempt_rt_setup.sh  ptp_sync.conf  ptp_sync.sh  robin_config.example.yaml  sbe_message_schema.xml  vault_setup.sh
docs/: ARCHITECTURE.md  COMPLIANCE.md  PERFORMANCE.md  PRODUCTION_ROADMAP.md  SECURITY.md  connection_pooling.md  openapi_spec.yaml
frontend/: .gitignore  generate_bindings.js  generate_components.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/: App.jsx  index.css
frontend/src-tauri/: tauri.conf.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIPanel.tsx  Disclaimers.tsx  GoalsPlanner.tsx  Header.tsx  NewsFeed.tsx  OptionsChain.tsx  OrderBook.tsx  OrderEntry.tsx  OrdersTable.tsx  PositionsTable.tsx  RiskMetrics.tsx  StrategyRoller.tsx  TradingViewChart.tsx  Watchlist.tsx
frontend/src/renderer/src/: chart.rs  lib.rs  orderbook.rs  text.rs
frontend/src/renderer/src/shaders/: chart.vert  orderbook.comp  text.frag  text.vert
frontend/src/state/: FactorAnalysis.ml  PortfolioOptimizer.ml  main.ml  signal.ml
frontend/src/store/: useTerminalStore.ts
infra/: colo_setup.sh
infra/systemd/: robin-engine.service  robin-gateway.service  robin-risk.service
infra/tls/: cert_manager.sh
logs/latency/: benchmark_results.json
protos/: agent_communication.proto
research/ai-engine/: CMakeLists.txt  README.md  onnx_adapter.hpp  robin_signal_model.py  signal_model.cpp  verification_oracle.py
research/portfolio/: shm_bridge.ml
research/pricing/: CMakeLists.txt
research/pricing/src/: MonteCarlo.cpp
research/strategy-engine/: backtester.py  correlation_engine.py  risk_analytics.R
scripts/: chaos_test.sh  integration_smoke_test.sh  machine_setup.sh  run_all.ps1  smoke_test.ps1  start_local.ps1  start_native.sh  stop_native.sh  system_tuning.sh  test_end_to_end.sh  test_latency.sh
services/ai-agent/: main.py  prompt.py  requirements.txt
services/ai-agents/alpha-research/: main.py
services/ai-agents/execution/: main.py
services/ai-agents/market-data/: main.py
services/ai-agents/news-sentiment/: main.py
services/ai-agents/portfolio/: main.py
services/ai-agents/risk/: main.py
services/ai-agents/strategy-generator/: main.py
services/ai-engine/: CMakeLists.txt  onnx_inference.cpp  robin_signal_model.py  verification_oracle.py
services/ai-engine/src/: onnx_inference.cpp
services/compliance/: Cargo.toml  audit_logger.rs  dune-project  robin_compliance.opam  spoofing_detector.rs
services/compliance/src/: audit_logger.rs  lib.rs  main.rs  spoofing_detector.rs
services/data-ingestion/alternative/: alternative_data_loader.py
services/data-ingestion/esg/: esg_vendor_adapter.py
services/data-ingestion/market/: robin_analysis.py  yfinance_fetcher.py
services/execution-core/: CMakeLists.txt
services/execution-core/bench/: order_book_benchmark.cpp
services/execution-core/src/: fix_gateway.cpp  fix_gateway.hpp  latency_benchmark.hpp  lockfree_queue.hpp  matching_engine.cpp  matching_engine.hpp  memory_pool.hpp  order_book.hpp  order_server.hpp  order_state.hpp  risk_checks.hpp  smart_order_router.hpp  sor.cpp  sor.hpp
services/gateway/: ai_prompt.go  auth.go  config.go  config_state.json  feature_flags.rs  fix_gateway.go  go.mod  go.sum  main.go  orchestrator.go  orchestrator_replay_test.go  orchestrator_test.go  tracing.go  websocket.go
services/hardware-fpga/: CMakeLists.txt  build_order_match.tcl  fpga_emulator.cpp  fpga_emulator.hpp  uio_driver.cpp  vitis_hls_order_match.cpp
services/ingestion/: CMakeLists.txt  cpp_ingestion.cpp
services/kdb-storage/: README.md  correlation_matrix.q  esg_feed.q  hdb.q  http_gateway.q  rdb.q  tick.q  tick_db.q  ws_bridge.q
services/kernel/: Makefile  gpio_kill.S  gpio_kill.c
services/network-bridge/: CMakeLists.txt  dpdk_ingest.cpp  kernel_bypass_ingest.cpp
services/network-bridge/src/: itch_parser.hpp
services/portfolio/: dune  dune-project  optimizer_daemon.ml  portfolio_opt.ml  robin_portfolio.opam
services/portfolio/_build/: .db  .digest-db  log
services/portfolio/_build/default/: portfolio_opt.ml  robin_portfolio.cma  robin_portfolio.cmxa  robin_portfolio.cmxs  robin_portfolio.ml-gen
services/portfolio/_build/default/.merlin-conf/: lib-robin_portfolio
services/portfolio/_build/default/.robin_portfolio.objs/: robin_portfolio__Portfolio_opt.impl.d
services/portfolio/_build/default/.robin_portfolio.objs/byte/: robin_portfolio.cmi  robin_portfolio.cmo  robin_portfolio.cmt  robin_portfolio__Portfolio_opt.cmi  robin_portfolio__Portfolio_opt.cmo  robin_portfolio__Portfolio_opt.cmt
services/portfolio/_build/default/.robin_portfolio.objs/native/: robin_portfolio.cmx  robin_portfolio__Portfolio_opt.cmx
services/pricing/src/: MonteCarlo.cpp
services/risk-analytics/: Cargo.toml
services/risk-analytics/src/: TaxEngine.rs  circuit_breaker.rs  config.rs  esg_mandate.rs  gate.rs  gpio_kill_switch.rs  hedging.rs  lib.rs  main.rs  metrics.rs  pre_trade.rs  raft_consensus.rs  risk_gate_fast.rs  shm_bridge.rs  supervisory.rs
services/shared/: config.h  config_schema.json  generate_configs.py
services/shared/ipc/: lockfree_ring_buffer.hpp
services/shared/schemas/: trade.capnp
services/strategy-engine/: backtester.py  corporate_actions.py  risk_analytics.R
