cmake_minimum_required(VERSION 3.25)
project(robin-ai-engine VERSION 0.1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(USE_ONNX_RUNTIME "Build with ONNX Runtime support" OFF)

if(USE_ONNX_RUNTIME)
    add_executable(signal_model signal_model.cpp onnx_adapter.hpp)
    target_compile_definitions(signal_model PRIVATE USE_ONNX_RUNTIME)
    target_link_libraries(signal_model PRIVATE onnxruntime)
    target_compile_options(signal_model PRIVATE -O3 -march=native -ffast-math)
    message(STATUS "ONNX Runtime enabled: linking onnxruntime")
else()
    add_executable(signal_model signal_model.cpp)
    target_compile_options(signal_model PRIVATE -O3 -march=native -ffast-math)
    message(STATUS "ONNX Runtime disabled: using default signal_model")
endif()
