[package]
name = "robin-compliance"
version = "1.0.0"
edition = "2021"
description = "Market surveillance, spoofing detection, WORM audit logging"

[lib]
name = "robin_compliance"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
