[package]
name = "robin-compliance"
version = "1.0.0"
edition = "2021"
description = "Market surveillance, spoofing detection, WORM audit logging, compliance daemon"

[lib]
name = "robin_compliance"
path = "src/lib.rs"

[[bin]]
name = "compliance-daemon"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex  = "0.4"
ctrlc = "3.4"
libc = "0.2"
memmap2 = "0.9"

[profile.release]
opt-level      = 3
lto            = "fat"
codegen-units  = 1
panic          = "abort"
strip          = "symbols"
