[package]
name = "robin-risk-analytics"
version = "1.0.0"
edition = "2021"
description = "Pre-trade risk gate research prototype, zero-allocation hot path"

[lib]
name = "robin_risk"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1", default-features = false }
libc = "0.2"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "robin-risk-daemon"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false

[features]
default = []
